# XEN-Proto

./: .gitattributes  .gitignore  .gitmodules  BuildDocs.ps1  BuildDocs.sh  CMakeLists.txt  EngineConfig.ini  README.md  TODO.md  doxyfile  vcpkg.json
Core/: ArenaAllocator.cpp  AudioChannel.h  AudioContext.cpp  AudioUtils.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Component.cpp  Component.h  Config.cpp  Config.h  EngineConfig.cpp  EngineConfig.h  Events.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GraphicsContext.cpp  GraphicsContext.h  InputManager.cpp  InputManager.h  InputMap.h  Memory.h  PipelineStates.cpp  PipelineStates.h  PoolAllocator.cpp  PoolAllocator.h  Scene.cpp  Scene.h  SceneContext.cpp  SceneContext.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  ThreadPool.cpp  ThreadPool.h
Core/Components/: Rigidbody.cpp  Rigidbody.h  SpriteRenderer.cpp  Transform.cpp  Transform.h
Core/Math/: Matrix4x4.cpp  Matrix4x4.h  MatrixOperations.h  Vector2.cpp  Vector4.cpp
Core/Memory/: ArenaAllocator.h  Unique.cpp
Examples/: Ball.cpp  Ball.h  CMakeLists.txt  Opponent.cpp  Opponent.h  Player.cpp  Player.h  Pong.cpp
Examples/Asteroids/: Bullet.cpp  CMakeLists.txt  Config.ini  Player.cpp  Player.h  main.cpp
Examples/Asteroids/Config/: Audio.ini  Rendering.ini
Examples/Asteroids/Res/: XenGame.yaml
Examples/Asteroids/Runtime/: CMakeLists.txt  main.cpp
Examples/Asteroids/Runtime/Source/: Asteroids.cpp  Asteroids.h  Bullet.cpp  Bullet.h  Player.cpp
Examples/AsteroidsNew/: CMakeLists.txt
Examples/AsteroidsNew/Config/: Input.ini
Examples/AsteroidsNew/Runtime/: CMakeLists.txt  main.cpp
Examples/AsteroidsNew/Runtime/Source/: Asteroids.cpp  Asteroids.h  Bullet.cpp  CMakeLists.txt  Player.cpp  Player.h
Examples/Pong/: Ball.cpp  Ball.h  CMakeLists.txt  Config.ini  GameInput.cpp  GameInput.h  GameManager.cpp  GameManager.h  Opponent.cpp  Opponent.h  Player.cpp  Player.h  Pong.cpp  main.cpp
Examples/Pong/Res/: XenGame.rc
Shaders/: SpriteQuad.h
Shared/: IO.h  TypeTraits.h  Types.h  glad.c
Shared/glad/: glad.h
Templates/Empty/: Empty.xenproj
Templates/EmptyProject/: Empty.xenproj
Templates/EmptyProject/Runtime/: CMakeLists.txt  main.cpp
Templates/EmptyProject/Runtime/Source/: CMakeLists.txt  Empty.cpp  Empty.h
Tools/: CMakeLists.txt  ImguiApp.cpp  ImguiApp.h
Tools/CreateProject/: CMakeLists.txt  main.cpp
Tools/Editor/: CMakeLists.txt  CachedLayout.h  FileTemplates.h  GameProcess.h  main.cpp
Tools/Resources/: XenTheme.h  app.rc
Tools/SceneEditor/: CMakeLists.txt  main.cpp
Tools/XnApp/: App.cpp  App.h  CMakeLists.txt  MenuBar.cpp  MenuBar.h  Widgets.cpp  Widgets.h  Window.cpp  Window.h
XnCore/: Api.h  AudioChannel.h  AudioContext.h  CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  Config.cpp  Config.h  EventSystem.h  Events.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GraphicsContext.cpp  GraphicsContext.h  InputEvents.h  InputManager.cpp  ObjectPool.cpp  ObjectPool.h  PipelineStates.h  Primitives.h  Reflection.cpp  Scene.cpp  Scene.h  SceneContext.h  Shader.h  TextureLoader.cpp  TextureLoader.h
XnCore/Components/: Rigidbody.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
XnCore/Math/: Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
XnCore/Memory/: ArenaAllocator.h  Shared.cpp  Shared.h  ThreadPool.cpp  ThreadPool.h  Unique.h
XnGUI/: CMakeLists.txt  InterfaceContext.cpp  InterfaceContext.h
XnMath/: CMakeLists.txt  Mat4x4.cpp  Mat4x4.h  Math.cpp  Math.h  MatrixOperations.h  Test.cpp  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  VectorOperations.h
XnProfiler/: CMakeLists.txt  Profiler.cpp  Profiler.h
