cmake_minimum_required(VERSION 3.14)
project(XEN-Proto)

add_library(XnCore STATIC
        #############################
        ${GLAD_SRCS}
        #############################
        Game.h
        Game.cpp
        Memory/ThreadPool.cpp
        Memory/ThreadPool.h
        GraphicsContext.cpp
        GraphicsContext.h
        Scene.h
        Scene.cpp
        Config.cpp
        Config.h
        PipelineStates.cpp
        PipelineStates.h
        GameObject.cpp
        GameObject.h
        Memory/PoolAllocator.h
        SceneContext.cpp
        SceneContext.h
        Memory/ArenaAllocator.cpp
        Memory/ArenaAllocator.h
        Clock.cpp
        Clock.h
        Primitives.h
        Components/SpriteRenderer.cpp
        Components/SpriteRenderer.h
        Shader.cpp
        Shader.h
        TextureLoader.cpp
        TextureLoader.h
        Camera.cpp
        Camera.h
        Component.cpp
        Component.h
        Components/Transform.cpp
        Components/Transform.h
        InputEvents.h
        InputManager.cpp
        InputManager.h
        InputMap.h
        Memory/Unique.h
        Memory/Shared.cpp
        Memory/Shared.h
        EventSystem.h
        Events.h
        Components/Rigidbody.cpp
        Components/Rigidbody.h
        AudioContext.cpp
        AudioContext.h
        AudioChannel.h
        AudioUtils.h
        ObjectPool.cpp
        ObjectPool.h
        Api.h
)

target_link_libraries(XnCore PRIVATE
        glfw
        glm::glm-header-only
        fmt::fmt-header-only
        OpenAL::OpenAL
        AudioFile
)